--- a/index.html
+++ b/index.html
@@ -19,42 +19,37 @@
       <div class="cal">
         <div class="cal-header">
         </div>
-      <div class="cal-body">
-        
+        <div class="cal-body">
+          <div class="cal-space">
+            <button class="space-2">AC</button>
+            <button>DEL</button>
+            <button>÷</button>
+          </div>
+          <div class="cal-space">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>*</button>
+          </div>
+          <div class="cal-space">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>-</button>
+          </div>
+          <div class="cal-space">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>+</button>
+          </div>
+          <div class="cal-space">
+            <button>.</button>
+            <button>0</button>
+            <button class="space-2">=</button>
+          </div>
+        </div>
       </div>
-      <div class="cal-space">
-        <button>0</button>
-        <button>0</button>
-        <button>0</button>
-        <button>0</button>
-      </div>
-      <div class="cal-space">
-        <button>0</button>
-        <button>0</button>
-        <button>0</button>
-        <button>0</button>
-      </div>
-      <div class="cal-space">
-        <button>0</button>
-        <button>0</button>
-        <button>0</button>
-        <button>0</button>
-      </div>
-      <div class="cal-space">
-        <button>0</button>
-        <button>0</button>
-        <button>0</button>
-        <button>0</button>
-      </div>
-      <div class="cal-space">
-        <button>0</button>
-        <button>0</button>
-        <button>0</button>
-        <button>0</button>
-      </div>
-      </div>
-    </div>
-  </div>
   <script src="script.js"></script>
 </body>
 </html>
