--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div class="wrapper">
       <div class="cal">
         <div class="cal-header">
+          <div class="cal-previous-preview"></div>
+          <div class="cal-current-preview"></div>
         </div>
         <div class="cal-body">
           <div class="cal-space">
