--- a/index.html
+++ b/index.html
@@ -18,37 +18,37 @@
     <div class="wrapper">
       <div class="cal">
         <div class="cal-header">
-          <div class="cal-previous-preview"></div>
-          <div class="cal-current-preview"></div>
+          <div data-previous-preview class="cal-previous-preview"></div>
+          <div data-current-preview class="cal-current-preview"></div>
         </div>
         <div class="cal-body">
           <div class="cal-space">
-            <button class="space-2">AC</button>
-            <button>DEL</button>
-            <button>÷</button>
+            <button data-btn-reset class="space-2">AC</button>
+            <button data-btn-delete>DEL</button>
+            <button data-btn-divide data-btn-operation>÷</button>
           </div>
           <div class="cal-space">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>*</button>
+            <button data-btn-number>1</button>
+            <button data-btn-number>2</button>
+            <button data-btn-number>3</button>
+            <button data-btn-multiply data-btn-operation>*</button>
           </div>
           <div class="cal-space">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>-</button>
+            <button data-btn-number>4</button>
+            <button data-btn-number>5</button>
+            <button data-btn-number>6</button>
+            <button data-btn-minus data-btn-operation>-</button>
           </div>
           <div class="cal-space">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>+</button>
+            <button data-btn-number>7</button>
+            <button data-btn-number>8</button>
+            <button data-btn-number>9</button>
+            <button data-btn-plus data-btn-operation>+</button>
           </div>
           <div class="cal-space">
-            <button>.</button>
-            <button>0</button>
-            <button class="space-2">=</button>
+            <button data-btn-number>.</button>
+            <button data-btn-number>0</button>
+            <button data-btn-eqaul data-btn-operation class="space-2">=</button>
           </div>
         </div>
       </div>
