계산기 기능 관련 DOM 셋팅

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button data-btn-number>1</button>
             <button data-btn-number>2</button>
             <button data-btn-number>3</button>
-            <button data-btn-multiply data-btn-operation>*</button>
+            <button data-btn-multiply data-btn-operation>x</button>
           </div>
           <div class="cal-space">
             <button data-btn-number>4</button>
